--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nikhil Kumar</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.5; }
-    .wrap { max-width: 900px; margin: 0 auto; }
-    nav a { margin-right: 14px; }
-  </style>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <div class="wrap">
