--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projects | Nikhil Kumar</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <h1>Projects</h1>
