--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,55 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicon -->
+<link rel="icon" href="img/profile/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/profile/favicon-32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="img/profile/favicon-16.png" sizes="16x16" type="image/png">
+
   <title>Contact | Nikhil Kumar</title>
   <link rel="stylesheet" href="assets/style.css">
+
 </head>
+
 <body>
-  <h1>Contact</h1>
-  <p>Email: nikhil.kumar1999@gmail.com</p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/">link</a></p>
-  <p><a href="index.html">Back to Home</a></p>
+  <div class="container">
+    <header>
+      <h1 class="site-title">Aashish Shaju</h1>
+      <p class="tagline">Vehicle dynamics, control, and simulation</p>
+
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="publications.html">Publications</a>
+        <a class="active" href="contact.html">Contact</a>
+      </nav>
+    </header>
+
+    <main>
+      <section class="section">
+        <h2>Contact</h2>
+
+        <div class="card">
+          <div><b>Email:</b> </div>
+          <div><b>LinkedIn:</b> <a href="https://www.linkedin.com">link</a></div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      © <span id="y"></span> Nikhil Kumar
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+  <script data-goatcounter="https://aashishshaju.goatcounter.com/count"
+  async src="//gc.zgo.at/count.js"></script>
+
 </body>
+
 </html>
