--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <header>
-      <h1 class="site-title">Aashish Shaju</h1>
+      <h1 class="site-title">Nikhil Kumar</h1>
       <p class="tagline">Vehicle dynamics, control, and simulation</p>
 
       <nav>
