--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,50 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Favicon -->
-<link rel="icon" href="img/profile/favicon.svg" type="image/svg+xml">
-<link rel="icon" href="img/profile/favicon-32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="img/profile/favicon-16.png" sizes="16x16" type="image/png">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Nikhil Kumar</title>
-  <link rel="stylesheet" href="assets/style.css">
-
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 
 <body>
   <div class="container">
-    <header>
+    <header class="site-header">
       <h1 class="site-title">Nikhil Kumar</h1>
-      <p class="tagline">Vehicle dynamics, control, and simulation</p>
+      <p class="site-subtitle">Contact mechanics, rail vehicle dynamics, tribology</p>
 
-      <nav>
+      <nav class="nav" aria-label="Primary">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="publications.html">Publications</a>
+        <a href="education.html">Education</a>
         <a class="active" href="contact.html">Contact</a>
       </nav>
     </header>
+
+    <hr class="hr" />
 
     <main>
       <section class="section">
         <h2>Contact</h2>
 
         <div class="card">
-          <div><b>Email:</b> </div>
-          <div><b>LinkedIn:</b> <a href="https://www.linkedin.com">link</a></div>
+          <div class="small">
+            Email: <a href="mailto:your.email@domain.com">your.email@domain.com</a><br />
+            LinkedIn: <a href="#">linkedin.com/in/your-handle</a><br />
+            Google Scholar: <a href="#">scholar profile link</a><br />
+            ResearchGate: <a href="#">researchgate profile link</a>
+          </div>
+
+          <p class="small" style="margin-top:12px;">
+            For collaborations related to wheel-rail contact, tribology, vehicle dynamics, and mechanics-based modeling,
+            feel free to reach out.
+          </p>
         </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       © <span id="y"></span> Nikhil Kumar
     </footer>
   </div>
@@ -47,9 +52,5 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
-  <script data-goatcounter="https://aashishshaju.goatcounter.com/count"
-  async src="//gc.zgo.at/count.js"></script>
-
 </body>
-
 </html>
