--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
 
             <div>
               <p class="small">
-                Brief 3 to 5 sentence overview goes here. This website highlights research and engineering work in
-                contact mechanics, rail vehicle dynamics, and tribology, including modeling, simulation, and
-                experimental insights.
+                I am a PhD researcher in Mechanical Engineering at Virginia Tech, affiliated with the Center for Vehicle Systems and Safety and the Railways Technologies Laboratory. 
+                My research focuses on wheel rail contact behavior and its implications for rail vehicle safety and performance.
               </p>
 
               <p class="small">
-                Add 1 more short paragraph with current affiliation or role, plus a one-line research focus.
-                Replace this placeholder with your actual text.
+                My doctoral work centers on contact mechanics and tribology, with an emphasis on experimental evaluation of third body layer effects,
+                surface finish, and frictional behavior at the wheel rail interface. This work combines laboratory experiments, numerical modeling,
+                and data analysis to assess their influence on wear, adhesion, and derailment risk.
+                Previously, I have worked on structural and contact analysis of aero engine bolted joints, CAD based design of unmanned aerial systems,
+                and prototype development of assistive mobility devices. These projects involved finite element analysis, mechanical design,
+                and experimental validation. My broader research interests include rail vehicle dynamics, wheel rail interaction,
+                tribology, and applied mechanics, with the goal of developing practical, mechanics-based insights that improve the safety and reliability of rail and transportation systems.  
               </p>
 
               <div class="badges" aria-label="Focus areas">
