--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="page-bg"></div>
   <div class="container">
     <header class="site-header">
       <h1 class="site-title">Nikhil Kumar</h1>
