--- a/projects.html
+++ b/projects.html
@@ -30,19 +30,33 @@
       <section class="section">
         <h2>Projects</h2>
 
-        <div class="card" id="project-1">
-          <b>Project title 1</b>
-          <div class="small">One-line problem statement and why it matters.</div>
-          <ul class="list">
-            <li>Key contribution or method (modeling, experiments, simulation, data).</li>
-            <li>Key result (quantitative if possible).</li>
-            <li>Tools: example (MATLAB, Python, ABAQUS, SIMPACK, Vampire, UM, etc.).</li>
-          </ul>
-          <p class="small" style="margin-top:10px;">
-            <a href="#">Link to report or code</a>
-            <span class="meta"> (optional)</span>
-          </p>
-        </div>
+<div class="card" id="project-1">
+  <b>Non-contact rail wheel defect diagnostics using air-coupled ultrasonic acoustic emission (MxV Rail)</b>
+  <div class="small">
+    Air-coupled UAE (20–80 kHz), experimental validation, defect characterization.
+  </div>
+
+  <p class="small" style="margin-top:10px;">
+    This project, conducted in collaboration with MxV Rail, focused on experimentally validating a non-contact
+    diagnostic framework for detecting structurally significant rail wheel defects using air-coupled Ultrasonic
+    Acoustic Emission (UAE). The approach enables defect detection without liquid couplants and at operationally
+    relevant stand-off distances.
+  </p>
+
+  <p class="small">
+    Primary contributions centered on the design and execution of controlled laboratory and field experiments,
+    including instrumented impact testing, sensor placement optimization, and repeatable data acquisition to
+    establish physics-based ground truth. These measurements supported identification of defect-specific acoustic
+    signatures and downstream multi-class diagnostic modeling.
+  </p>
+
+  <ul class="list">
+    <li>Controlled experimental validation of air-coupled UAE measurements.</li>
+    <li>Defect-specific acoustic signature characterization.</li>
+    <li>Experimental support for automated diagnostic modeling.</li>
+  </ul>
+</div>
+
 
         <div class="card" id="project-2">
           <b>Project title 2</b>
