--- a/education.html
+++ b/education.html
@@ -31,28 +31,22 @@
         <h2>Education</h2>
 
         <div class="card">
-          <b>PhD, Department, University</b>
-          <div class="small">Year range · Thesis topic (one line).</div>
-          <div class="meta" style="margin-top:8px;">Advisor: Name · Keywords: wheel-rail, contact, dynamics</div>
+          <b>PhD, Mechanical Engineering, Virginia Tech</b>
+          <div class="small">2022-2025 · Effect of Wheel and Rail Conditions on Contact Dynamics and Mechanics</div>
         </div>
 
         <div class="card">
-          <b>MS, Department, University</b>
-          <div class="small">Year range · Research focus (one line).</div>
-        </div>
-
-        <div class="card">
-          <b>BS, Department, University</b>
-          <div class="small">Year range · Focus area (one line).</div>
+          <b>BS, Mechanical Engineering, Vellore Institute of Technology</b>
+          <div class="small">2018-2022</div>
         </div>
 
         <h3>Skills</h3>
         <div class="card">
           <ul class="list">
-            <li>Contact mechanics: Hertz, non-Hertz, rough surface contact (edit as applicable).</li>
-            <li>Rail dynamics: vehicle-track interaction, curving, stability, wear metrics.</li>
-            <li>Tribology: friction models, lubrication regimes, wear modeling, material response.</li>
-            <li>Software: list tools (MATLAB, Python, FEA packages, MBD tools, data acquisition).</li>
+            <li>Contact mechanics: Hertz, non-Hertz, rough surface contact</li>
+            <li>Rail dynamics: vehicle-track interaction, curving, stability, wear metrics</li>
+            <li>Tribology: friction models, lubrication regimes, wear modeling, material response</li>
+            <li>Software: MATLAB, Python, FEA packages, MBD tools, data acquisition</li>
           </ul>
         </div>
       </section>
