--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
 
         <div class="card">
           <div class="small">
-            Email: <a href="mailto:your.email@domain.com">your.email@domain.com</a><br />
-            LinkedIn: <a href="#">linkedin.com/in/your-handle</a><br />
-            Google Scholar: <a href="#">scholar profile link</a><br />
-            ResearchGate: <a href="#">researchgate profile link</a>
+            Email: <a href="mailto: nikhil.kumar1999@gmail.com">your.email@domain.com</a><br />
+            LinkedIn: <a href="#">https://www.linkedin.com/in/nikhilk22/</a><br />
+            Google Scholar: <a href="#">https://scholar.google.com/citations?user=mMcpcOAAAAAJ&hl=en</a><br />
+            ResearchGate: <a href="#">https://www.researchgate.net/profile/Nikhil-Kumar-154</a>
           </div>
 
           <p class="small" style="margin-top:12px;">
