--- a/index.html
+++ b/index.html
@@ -95,5 +95,7 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
+  <script data-goatcounter="https://nikhilkumar.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
