--- a/projects.html
+++ b/projects.html
@@ -87,5 +87,7 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
+  <script data-goatcounter="https://nikhilkumar.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
