--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,11 @@
 
         <div class="card">
           <div class="small">
-            Email: <a href="mailto: nikhil.kumar1999@gmail.com">your.email@domain.com</a><br />
-            LinkedIn: <a href="#">https://www.linkedin.com/in/nikhilk22/</a><br />
-            Google Scholar: <a href="#">https://scholar.google.com/citations?user=mMcpcOAAAAAJ&hl=en</a><br />
-            ResearchGate: <a href="#">https://www.researchgate.net/profile/Nikhil-Kumar-154</a>
+Email: <a href="mailto:nikhil.kumar1999@gmail.com">nikhil.kumar1999@gmail.com</a><br />
+LinkedIn: <a href="https://www.linkedin.com/in/nikhilk22/" target="_blank" rel="noopener">linkedin.com/in/nikhilk22</a><br />
+Google Scholar: <a href="https://scholar.google.com/citations?user=mMcpcOAAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar profile</a><br />
+ResearchGate: <a href="https://www.researchgate.net/profile/Nikhil-Kumar-154" target="_blank" rel="noopener">ResearchGate profile</a>
+
           </div>
 
           <p class="small" style="margin-top:12px;">
