--- a/publications.html
+++ b/publications.html
@@ -34,11 +34,11 @@
         <div class="card pub">
           <div class="pub-year">2025</div>
           <div>
-            <b>Paper title (journal)</b>
+            <b>"Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
             <div class="small">
-              Nikhil Kumar, Coauthor A, Coauthor B.<br />
-              Journal Name, Volume(Issue), Pages, Year.
-              <span class="meta"> DOI: xxx (optional)</span>
+              Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
+              Machines, 12(5), 1 - 19, 2024.
+              <span class="meta"> DOI: https://doi.org/10.3390/machines12050301</span>
             </div>
             <div class="small" style="margin-top:8px;">
               <a href="#">PDF</a> · <a href="#">DOI</a> · <a href="#">Code</a>
