--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
               <span class="meta"> DOI: https://doi.org/10.3390/machines12050301</span>
             </div>
             <div class="small" style="margin-top:8px;">
-              <a href="#">PDF</a> · <a href="#">DOI</a> · <a href="#">Code</a>
+              <a href="#">PDF</a> · <a href="#">DOI</a>
             </div>
           </div>
         </div>
