--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
         <div class="card pub">
           <div class="pub-year">2025</div>
           <div>
-            <b>"Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
+            <b>Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
             <div class="small">
               Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
               Machines, 12(5), 1 - 19, 2024.
