--- a/publications.html
+++ b/publications.html
@@ -38,10 +38,10 @@
             <div class="small">
               Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
               Machines, 12(5), 1 - 19, 2024.
-              <span class="meta"> DOI: https://doi.org/10.3390/machines12050301</span>
+              <span class="meta"> DOI: </span>
             </div>
             <div class="small" style="margin-top:8px;">
-              <a href="#">PDF</a> · <a href="#">DOI</a>
+              <a href="https://doi.org/10.3390/machines12050301">DOI</a>
             </div>
           </div>
         </div>
