--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
               <span class="meta"> DOI: </span>
             </div>
             <div class="small" style="margin-top:8px;">
-              <a href="https://doi.org/10.3390/machines12050301">DOI</a>
+              <a href="https://doi.org/10.3390/machines12050301" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
         </div>
