--- a/publications.html
+++ b/publications.html
@@ -34,25 +34,45 @@
         <div class="card pub">
           <div class="pub-year">2025</div>
           <div>
-            <b>Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
+            <b>Practical Application of Passive Air-Coupled Ultrasonic Acoustic Sensors for Wheel Crack Detection</b>
             <div class="small">
-              Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
-              Machines, 12(5), 1 - 19, 2024.
-             
+              Aashish Shaji, Nikhil Kumar, Giovanni Mantovani, Steve Southward, Mehdi Ahmadian.<br />
+              Sensors, 25(19), 6126, 2025.
             </div>
             <div class="small" style="margin-top:8px;">
-              <a href="https://doi.org/10.3390/machines12050301" target="_blank" rel="noopener">DOI</a>
+              <a href="https://doi.org/10.3390/s25196126" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
-        </div>
+          <div>
+            <b>Design Evaluation of a Single Wheelset Roller Rig for Railroad Curving Dynamics and Creepage Studies</b>
+            <div class="small">
+              Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
+              Designs, 9(4), 99, 2025.
+            </div>
+            <div class="small" style="margin-top:8px;">
+              <a href="https://doi.org/10.3390/designs9040099" target="_blank" rel="noopener">DOI</a>
+            </div>
+          </div>
+          <div>
+            <b>Traction enhancement evaluation of Magnetite and Alumina</b>
+            <div class="small">
+              Nikhil Kumar, Ahmed Radmehr, and Mehdi Ahmadian.<br />
+              International Journal of Rail Transportation, 1 - 19, 2025.
+            </div>
+            <div class="small" style="margin-top:8px;">
+              <a href="https://doi.org/10.1080/23248378.2025.2484807" target="_blank" rel="noopener">DOI</a>
+            </div>
 
         <div class="card pub">
           <div class="pub-year">2024</div>
           <div>
-            <b>Paper title (journal)</b>
+            <b>Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
             <div class="small">
-              Nikhil Kumar, Coauthor A.<br />
-              Journal Name, Year.
+              Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
+              Machines, 12(5), 1 - 19, 2024.
+            </div>
+            <div class="small" style="margin-top:8px;">
+              <a href="https://doi.org/10.3390/machines12050301" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
         </div>
