--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,10 @@
               <a href="https://doi.org/10.3390/s25196126" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
-
+          
+        <div class="card pub">
+          <div class="pub-year">2025</div>
+          <div>
           <div>
             <b>Design Evaluation of a Single Wheelset Roller Rig for Railroad Curving Dynamics and Creepage Studies</b>
             <div class="small">
@@ -54,7 +57,10 @@
               <a href="https://doi.org/10.3390/designs9040099" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
-          
+
+        <div class="card pub">
+          <div class="pub-year">2025</div>
+          <div>
           <div>
             <b>Traction enhancement evaluation of Magnetite and Alumina</b>
             <div class="small">
