--- a/publications.html
+++ b/publications.html
@@ -43,10 +43,10 @@
               <a href="https://doi.org/10.3390/s25196126" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
-          
+        </div>
+
         <div class="card pub">
           <div class="pub-year">2025</div>
-          <div>
           <div>
             <b>Design Evaluation of a Single Wheelset Roller Rig for Railroad Curving Dynamics and Creepage Studies</b>
             <div class="small">
@@ -57,10 +57,10 @@
               <a href="https://doi.org/10.3390/designs9040099" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
+        </div>
 
         <div class="card pub">
           <div class="pub-year">2025</div>
-          <div>
           <div>
             <b>Traction enhancement evaluation of Magnetite and Alumina</b>
             <div class="small">
@@ -70,6 +70,8 @@
             <div class="small" style="margin-top:8px;">
               <a href="https://doi.org/10.1080/23248378.2025.2484807" target="_blank" rel="noopener">DOI</a>
             </div>
+          </div>
+        </div>
 
         <div class="card pub">
           <div class="pub-year">2024</div>
