--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header class="site-header">
       <h1 class="site-title">Nikhil Kumar</h1>
-      <p class="site-subtitle">Contact mechanics, rail vehicle dynamics, tribology</p>
+      <p class="site-subtitle">Contact Mechanics, Rail Vehicle Dynamics, Tribology</p>
 
       <nav class="nav" aria-label="Primary">
         <a href="index.html">Home</a>
@@ -30,6 +30,20 @@
         <h2>Publications</h2>
 
         <h3>Journal Articles</h3>
+
+        <div class="card pub">
+          <div class="pub-year">2025</div>
+          <div>
+            <b>Wheel-Rail Induced Derailment Analysis: A Comprehensive Literature Review of Experimental and Simulation-Based Approaches</b>
+            <div class="small">
+              Nikhil Kumar, Brian Marquis, and Mehdi Ahmadian.<br />
+              Railway Engineering Science [Under Review].
+            </div>
+            <div class="small" style="margin-top:8px;">
+              <a href="https://doi.org/10.1007/s40534-025-00425-0" target="_blank" rel="noopener">DOI</a>
+            </div>
+          </div>
+        </div>
 
         <div class="card pub">
           <div class="pub-year">2025</div>
