--- a/publications.html
+++ b/publications.html
@@ -104,12 +104,49 @@
         <h3>Conference Papers</h3>
 
         <div class="card pub">
+          <div class="pub-year">2026</div>
+          <div>
+            <b>Validation of Conformal and Two-Point Contact Simulations using VT-FRA Roller Rig Test Data</b>
+            <div class="small">
+              Nikhil Kumar, Giovanni Mantovani, and Mehdi Ahmadian.<br />
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, USA, 2026.
+              [In Review]
+            </div>
+          </div>
+        </div>
+
+        <div class="card pub">
+          <div class="pub-year">2026</div>
+          <div>
+            <b>Derailment and Curving Dynamics Assessment using a One-Quarter Scaled Roller Rig </b>
+            <div class="small">
+              Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, USA, 2026.
+              [In Review]
+            </div>
+          </div>
+        </div>
+
+        <div class="card pub">
+          <div class="pub-year">2025</div>
+          <div>
+            <b>Development of a Wheelset Roller Rig for Improving Rolling Stock Traction Efficiency</b>
+            <div class="small">
+              Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+            <a href="https://doi.org/10.5281/zenodo.17219621" target="_blank" rel="noopener">DOI</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card pub">
           <div class="pub-year">2024</div>
           <div>
-            <b>Paper title (conference)</b>
+            <b>Estimation of Wheel-Rail Contact Patch Geometry Under Curving Conditionsy</b>
             <div class="small">
-              Nikhil Kumar, Coauthor A, Coauthor B.<br />
-              Conference Name, Location, Year.
+              Nikhil Kumar, Giovanni Mantovani, and Mehdi Ahmadian.<br />
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+            <a href="https://doi.org/10.5281/zenodo.16055410" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
         </div>
