--- a/publications.html
+++ b/publications.html
@@ -134,6 +134,8 @@
             <div class="small">
               Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
               Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+            </div>
+            <div class="small" style="margin-top:8px;">
             <a href="https://doi.org/10.5281/zenodo.17219621" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
