--- a/publications.html
+++ b/publications.html
@@ -148,6 +148,8 @@
             <div class="small">
               Nikhil Kumar, Giovanni Mantovani, and Mehdi Ahmadian.<br />
               Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+            </div>
+            <div class="small" style="margin-top:8px;">
             <a href="https://doi.org/10.5281/zenodo.16055410" target="_blank" rel="noopener">DOI</a>
             </div>
           </div>
